app/src/main/java/com/example/fitnesstracker/presentation/auth/error/NotExistedUser.java
package com.example.fitnesstracker.presentation.auth.error;

public final class NotExistedUser implements AuthError {}
